--- a/fonts/demo.html
+++ b/fonts/demo.html
@@ -15,20 +15,6 @@
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
         <div class="glyph fs1">
             <div class="clearfix bshadow0 pbs">
-                <span class="icon-envelop"></span>
-                <span class="mls"> icon-envelop</span>
-            </div>
-            <fieldset class="fs0 size1of1 clearfix hidden-false">
-                <input type="text" readonly value="e945" class="unit size1of2" />
-                <input type="text" maxlength="1" readonly value="&#xe945;" class="unitRight size1of2 talign-right" />
-            </fieldset>
-            <div class="fs0 bshadow0 clearfix hidden-true">
-                <span class="unit pvs fgc1">liga: </span>
-                <input type="text" readonly value="envelop, mail" class="liga unitRight" />
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix bshadow0 pbs">
                 <span class="icon-mobile"></span>
                 <span class="mls"> icon-mobile</span>
             </div>
@@ -53,6 +39,20 @@
             <div class="fs0 bshadow0 clearfix hidden-true">
                 <span class="unit pvs fgc1">liga: </span>
                 <input type="text" readonly value="user-tie, user5" class="liga unitRight" />
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix bshadow0 pbs">
+                <span class="icon-mail2"></span>
+                <span class="mls"> icon-mail2</span>
+            </div>
+            <fieldset class="fs0 size1of1 clearfix hidden-false">
+                <input type="text" readonly value="ea84" class="unit size1of2" />
+                <input type="text" maxlength="1" readonly value="&#xea84;" class="unitRight size1of2 talign-right" />
+            </fieldset>
+            <div class="fs0 bshadow0 clearfix hidden-true">
+                <span class="unit pvs fgc1">liga: </span>
+                <input type="text" readonly value="mail3, contact3" class="liga unitRight" />
             </div>
         </div>
     </div>
