--- a/index.html
+++ b/index.html
@@ -9,31 +9,37 @@
 <body>
     <div class="content_box">
         <div class="card">
-            <img src="pictures/Br.jpg" class="card_image">
-            <h1>Vojtěch Brodský (Br)</h1>
-        </div>
-        <div class="card_content">
-            <p><span class="icon-user-tie"></span>Pedagog</p>
-            <p><span class="icon-mail2"></span>vojtech.brodsky@psllib.cz</p>
-            <p><span class="icon-mobile"></span>+420 487 989 666</p>
-        </div>
-        <div class="card">
-            <img src="pictures/Ba.jpg" class="card_image">
-            <h1>Zuzana Bernátová (Ba)</h1>
-        </div>
-        <div class="card_content">
-            <p><span class="icon-user-tie"></span>Pedagog</p>
-            <p><span class="icon-mail2"></span>zuzana.bernatova@psllib.cz</p>
-            <p><span class="icon-mobile"></span>+420 487 989 623</p>
+            <div class="card_head">
+                <img src="./pictures/Br.jpg" class="card_image" >
+                <h1>Vojtěch Brodský (Br)</h1>
+            </div>
+            <div class="card_content">
+                <p><span class="icon-user-tie"></span> Pedagog</p>
+                <p><span class="icon-mail2"></span> vojtech.brodsky@pslib.cz</p>
+                <p><span class="icon-mobile"></span> +420 487 989 666</p>
+            </div>
         </div>
         <div class="card">
-            <img src="pictures/Jc.jpg" class="card_image">
-            <h1>Leona Jenčová (Jč)</h1>
+            <div class="card_head">
+                <img src="./pictures/Jc.jpg" class="card_image" >
+                <h1>Leona Jenčová (Jč)</h1>
+            </div>
+            <div class="card_content">
+                <p><span class="icon-user-tie"></span> Pedagog</p>
+                <p><span class="icon-mail2"></span> leona.jencova@pslib.cz</p>
+                <p><span class="icon-mobile"></span> +420 485 100 113</p>
+            </div>
         </div>
-        <div class="card_content">
-            <p><span class="icon-user-tie"></span>Pedagog</p>
-            <p><span class="icon-mail2"></span>leona.jencova@psllib.cz</p>
-            <p><span class="icon-mobile"></span>+420 485 100 113</p>
+        <div class="card">
+            <div class="card_head">
+                <img src="./pictures/Ba.jpg" class="card_image" >
+                <h1>Zuzana Bernátová (Ba)</h1>
+            </div>
+            <div class="card_content">
+                    <p><span class="icon-user-tie"></span> Pedagog</p>
+                    <p><span class="icon-mail2"></span> zuzana.bernatova@pslib.cz</p>
+                    <p><span class="icon-mobile"></span> +420 487 989 623</p>
+            </div>
         </div>
     </div>
 </body>
